# look-above

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  config.example.toml  rust-toolchain.toml
.claude/agents/: architecture-agent.md  data-source-agent.md  geo-math-agent.md  renderer-agent.md  storage-agent.md  testing-agent.md  ux-agent.md
.claude/skills/authorized-aviation-sources/: SKILL.md
.claude/skills/authorized-aviation-sources/references/: enrichment.md  live-positions.md  static-imports.md
.claude/skills/high-fidelity-flight-visualization/: SKILL.md
.claude/skills/token-managed-implementation/: SKILL.md
.github/workflows/: ci.yml
crates/app/: Cargo.toml
crates/app/src/: config.rs  double_buffer.rs  enrichment.rs  frame_stats.rs  headless.rs  logging.rs  main.rs  pipeline.rs  simulation.rs  window.rs
crates/core/: Cargo.toml
crates/core/benches/: interpolation.rs
crates/core/src/: camera.rs  contracts.rs  error.rs  geo.rs  globe_camera.rs  lib.rs  lod.rs  merge.rs  secret.rs  sim.rs  types.rs
crates/import/: Cargo.toml
crates/import/src/: import_basemap.rs  import_ourairports.rs
crates/ingest/: Cargo.toml
crates/ingest/src/: adsb_lol.rs  adsbdb.rs  airplanes_live.rs  allowlist.rs  budget.rs  http.rs  lib.rs  metar.rs  normalize.rs  opensky.rs  pacer.rs  point.rs  poller.rs  readsb.rs
crates/ingest/src/http/: backoff.rs
crates/ingest/src/opensky/: auth.rs  states.rs
crates/ingest/tests/fixtures/adsbdb/: README.md  aircraft_malformed.json  aircraft_nominal.json  callsign_malformed.json  callsign_nominal.json
crates/ingest/tests/fixtures/adsblol/: README.md  point_empty.json  point_malformed.json  point_nominal.json  point_nulls.json  sample.json
crates/ingest/tests/fixtures/airplaneslive/: README.md  point_empty.json  point_malformed.json  point_nominal.json  point_nulls.json
crates/ingest/tests/fixtures/aviationweather/: README.md  metar_malformed.json  metar_nominal.json
crates/ingest/tests/fixtures/opensky/: README.md  states_empty.json  states_malformed.json  states_nominal.json  states_nulls.json
crates/render/: Cargo.toml
crates/render/assets/basemap/: README.md  coastline.geojson  land.geojson
crates/render/src/: aircraft.rs  airport.rs  basemap.rs  color.rs  density.rs  error.rs  glyph_atlas.rs  info_card.rs  label.rs  label_atlas.rs  lib.rs  metar_badge.rs  renderer.rs  selection.rs  stats_overlay.rs  trail.rs
crates/render/src/shaders/: aircraft.wgsl  airport.wgsl  basemap.wgsl  density.wgsl  globe_basemap.wgsl  label.wgsl  metar_badge.wgsl  trail.wgsl
crates/store/: Cargo.toml
crates/store/assets/ourairports/: runways.csv
crates/store/migrations/: 0001_init.sql  0002_airports.sql  0003_metars.sql  0004_flights.sql
crates/store/src/: aircraft.rs  error.rs  flights.rs  lib.rs  metar.rs  migrations.rs  ourairports.rs  writer.rs
docs/: 00_PRODUCT_VISION.md  01_VISUAL_RENDERING_REQUIREMENTS.md  02_ARCHITECTURE_DECISION_TEMPLATE.md  03_DATA_SOURCES_NON_ADSB.md  04_PRIVACY_AND_SAFETY_RULES.md  05_TOKEN_MANAGEMENT.md  06_TOOL_USAGE_RULES.md  07_MILESTONE_PLAN.md  08_DATABASE_SCHEMA.md  09_API_CONTRACTS.md  10_TEST_PLAN.md  11_ACCEPTANCE_CRITERIA.md  12_PROMPTS_FOR_CLAUDE_OPUS_SONNET_FABLE.md  13_VISUAL_QA_CHECKLIST.md
plans/: CURRENT_STATUS.md  DECISION_LOG.md  M0_REPO_AUDIT_AND_ARCHITECTURE.md  M1_AUTHORIZED_DATA_INGESTION.md  M2_HIGH_FIDELITY_RENDERER.md  M3_ENRICHMENT_AND_NON_ADSB.md  M4_DUAL_MODE_LOD_AND_INTERACTION.md  NEXT_ACTIONS.md  RISK_REGISTER.md
prompts/: FLIGHT_TRACKER_MASTER_PROMPT.md
scripts/: record_fixture.rs
