[workspace]
resolver = "3"
members = [
    "crates/core",
    "crates/ingest",
    "crates/store",
    "crates/render",
    "crates/app",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.96"
license = "MIT"

# Shared dependency versions are pinned here in M0 item 0.2.
[workspace.dependencies]

[workspace.lints.rust]
unsafe_code = "warn"
missing_debug_implementations = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# Project rule (CLAUDE.md): no unwrap outside tests. Tests opt out locally.
unwrap_used = "warn"
# Pedantic lints relaxed for this codebase:
module_name_repetitions = "allow"   # StateVector in core::state is fine
must_use_candidate = "allow"        # too noisy for pure-math APIs
missing_errors_doc = "allow"        # thiserror enums are self-documenting
missing_panics_doc = "allow"
float_cmp = "allow"                 # geo golden tests compare via epsilon helpers anyway
