[workspace]
resolver = "3"
members = [
    "crates/core",
    "crates/ingest",
    "crates/store",
    "crates/render",
    "crates/app",
    "crates/import",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.96"
license = "MIT"

# Versions pinned in M0 item 0.2 (see plans/DECISION_LOG.md 2026-07-15).
# Reproducibility comes from the committed Cargo.lock; `=` pins are reserved for the
# graphics pair, which ADR-003 says may only move at a milestone boundary.
[workspace.dependencies]

# Internal crates. Dependency direction: core <- ingest, store, render <- app.
look-above-core = { path = "crates/core" }
look-above-ingest = { path = "crates/ingest" }
look-above-store = { path = "crates/store" }
look-above-render = { path = "crates/render" }

# core (no I/O): std + serde + rayon + thiserror only.
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
rayon = "1.12.0"
thiserror = "2.0.18"
# Proc-macro only (syn/quote/proc-macro2) — pulls no runtime, so core stays I/O-free.
# Needed because `LiveSource` must be dyn-compatible for the poller's failover list;
# native async-fn-in-trait is not. See docs/09 and DECISION_LOG 2026-07-15.
async-trait = "0.1.89"

# ingest: tokio owns all network I/O; results cross to the sync pipeline via crossbeam (ADR-005).
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "time", "sync"] }
# reqwest 0.13 defaults to rustls (default-tls = [rustls]); no native-tls/OpenSSL in the tree.
# `form` is the OAuth2 client-credentials grant body (item 1.3) and `query` the /states/all
# bbox params (item 1.4) — 0.13 moved both behind features, where 0.12 had them always on.
reqwest = { version = "0.13.4", features = ["json", "form", "query"] }
crossbeam-channel = "0.5.16"
# Backoff jitter only. `rand` is the ecosystem default but its default features pull in
# chacha20 — a CSPRNG we'd be using to smear a retry by a few seconds. See DECISION_LOG.
fastrand = "2.4.1"

# store: bundled SQLite, no system dependency (ADR-004).

rusqlite = { version = "0.40.1", features = ["bundled"] }

# import/store: streaming CSV parsing for the OurAirports snapshot (M3 item 3.1) — import
# fetches/converts, store re-reads the trimmed, bundled result on first run. Default features
# already include Serde-based (header-name-matched) deserialization, so no extra feature flag.
csv = "1.4.0"

# render/app: exact pins — wgpu/winit churn is the known risk in ADR-003.
wgpu = "=30.0.0"
winit = "=0.30.13"
# wgpu's setup calls are async; ADR-005 bars async from `render`. This drives those two
# futures to completion on the calling thread and pulls in nothing else. See DECISION_LOG.
pollster = "1.0.1"
# render: base-map polygon/line tessellation (M2 item 2.2b). Default features only — no
# debugger/serialization/profiling, none of which this crate needs.
lyon = "1.0.19"
# render: casts basemap/uniform data to the byte slices wgpu's buffer-upload calls want.
# `derive` for the `Pod`/`Zeroable` impls on this crate's own vertex/uniform structs.
bytemuck = { version = "1.25.1", features = ["derive"] }

# app only.
anyhow = "1.0.103"
toml = "1.1.3"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
# app: bounds the in-memory adsbdb lookup cache (M3 item 3.4, `app::enrichment`) — the
# hot-path front of the persistent `aircraft.fetched_at`/`lookup_failed_at` negative-cache
# `crates/store` already carries. Lives in `app`, not `ingest`, because persisting a lookup's
# result means calling `store::Writer`, and `ingest`/`store` may not depend on each other
# (dependency direction above). Default features only.
lru = "0.18.1"

# dev-only. docs/10 §2 mandates wiremock for adapter tests: assert the request we send
# (params, auth header, User-Agent), not just the parse of a canned reply.
wiremock = "0.6.5"
# dev-only. docs/10 §5 gate benchmarks (M2 item 2.10): `cargo bench`, not CI-per-push.
criterion = "0.8.2"

[workspace.lints.rust]
unsafe_code = "warn"
missing_debug_implementations = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# Project rule (CLAUDE.md): no unwrap outside tests. Tests opt out locally.
unwrap_used = "warn"
# Pedantic lints relaxed for this codebase:
module_name_repetitions = "allow"   # StateVector in core::state is fine
must_use_candidate = "allow"        # too noisy for pure-math APIs
missing_errors_doc = "allow"        # thiserror enums are self-documenting
missing_panics_doc = "allow"
float_cmp = "allow"                 # geo golden tests compare via epsilon helpers anyway
