[package]
name = "look-above"
description = "Look Above: native flight tracker binary — wiring, config, event loop."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
look-above-core.workspace = true
look-above-ingest.workspace = true
look-above-store.workspace = true
look-above-render.workspace = true

anyhow.workspace = true
crossbeam-channel.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
wgpu.workspace = true
winit.workspace = true

[lints]
workspace = true
