[package]
name = "look-above-core"
description = "Types, geo math, and simulation contracts. No I/O dependencies."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
rayon.workspace = true
serde.workspace = true
thiserror.workspace = true

[dev-dependencies]
serde_json.workspace = true

[lints]
workspace = true
