[package]
name = "look-above-import"
description = "One-off static-asset import tooling (basemap, and future enrichment bundles). Never runs from the shipped app."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "import-basemap"
path = "src/import_basemap.rs"

[[bin]]
name = "import-ourairports"
path = "src/import_ourairports.rs"

[dependencies]
look-above-core.workspace = true

reqwest.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
csv.workspace = true
shapefile = "0.9.0"
zip = { version = "8.6.0", default-features = false, features = ["deflate"] }

[lints]
workspace = true
