[package]
name = "look-above-ingest"
description = "LiveSource adapters, pollers, and rate/credit budgeting."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
look-above-core.workspace = true

crossbeam-channel.workspace = true
fastrand.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
wiremock.workspace = true

[lints]
workspace = true
