[package]
name = "look-above-ingest"
description = "LiveSource adapters, pollers, and rate/credit budgeting."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
look-above-core.workspace = true

# `LiveSource` is dyn-compatible via async-trait (docs/09); implementing it needs the macro.
async-trait.workspace = true
crossbeam-channel.workspace = true
fastrand.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
# The pacer tests run under tokio's paused clock: the sleeps are virtual, the schedule real.
tokio = { workspace = true, features = ["test-util"] }
wiremock.workspace = true

# The fixture recorder (item 1.10). It lives at the repo-root `scripts/` the docs name
# (docs/06, docs/10) rather than under `src/bin/`, and is a bin of this crate because it is
# the one sanctioned live fetch besides the app: it reuses this crate's allowlist-enforcing
# `HttpClient`, the OpenSky auth, and the source endpoints so a recording goes out exactly as
# a poll would. It is never built by `cargo build -p look-above-ingest` unless asked for by
# name, and its pure trim/scrub logic is unit-tested offline like everything else.
[[bin]]
name = "record-fixture"
path = "../../scripts/record_fixture.rs"

[lints]
workspace = true
