[package]
name = "look-above-render"
description = "wgpu pipelines, WGSL shaders, camera. No network, no DB."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
look-above-core.workspace = true

bytemuck.workspace = true
lyon.workspace = true
pollster.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
wgpu.workspace = true

[lints]
workspace = true
