[package]
name = "look-above-store"
description = "SQLite persistence: schema, migrations, single-writer thread."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
look-above-core.workspace = true

crossbeam-channel.workspace = true
csv.workspace = true
rusqlite.workspace = true
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true

[lints]
workspace = true
